fixed z-index issue on mobile nav

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -190,6 +190,7 @@
       background-size: 100% 100%;
       transform: rotate(-15deg);
       opacity: 0.2;
+      z-index: -1;
 
       @media (min-width: $breakpoint-md) {
         width: 1000px;
